@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3546276: Dailymotion and Vimeo API support
 - 3545447: Youtube API support
 - 3539147: URL and FILE database scheduler task
 - 3539146: Tag boost in HTML parser	
